# SimpleDBus

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  conanfile.py
.github/workflows/: ci_build.yml  ci_lint.yml  ci_test.yml
cmake/: install-config.cmake
cmake/find/: Findfmt.cmake
docs/: changelog.rst  conf.py  index.rst  installation.rst  security.rst  usage.rst
examples/: CMakeLists.txt
examples/ble_nus/: CMakeLists.txt  main.cpp
examples/manuf_data/: CMakeLists.txt  main.cpp
examples/notification/: CMakeLists.txt  main.cpp
include/simpledbus/: SimpleDBus.h
include/simpledbus/advanced/: Callback.h  Interface.h  Proxy.h  ProxyBase.h
include/simpledbus/base/: BasicInterface.h  Connection.h  Exceptions.h  Holder.h  Interface.h  InterfaceHolder.h  Logging.h  Message.h  Proxy.h
include/simpledbus/interfaces/: Introspectable.h  ObjectManager.h  Properties.h
scripts/: build_examples.sh  build_standalone.sh  build_tests.sh
src-example/: main.cpp
src-example-minimal/: main.cpp
src-libs/bluezdbus/: BluezService.cpp
src-libs/simpledbus/base/: Message.cpp  Message.h
src/advanced/: Callback.cpp  Interface.cpp  Proxy.cpp  ProxyBase.cpp
src/base/: BasicInterface.cpp  Connection.cpp  Exceptions.cpp  Holder.cpp  Interface.cpp  InterfaceHolder.cpp  Logger.cpp  Message.cpp  Proxy.cpp
src/bluezdbus/: BluezAdapter.cpp  BluezAdapter.h  BluezAgent.cpp  BluezAgent.h  BluezDevice.cpp  BluezDevice.h  BluezGattCharacteristic.cpp  BluezGattService.cpp  BluezGattService.h  BluezService.cpp  BluezService.h
src/bluezdbus/interfaces/: Adapter1.cpp  Adapter1.h  Device1.cpp  Device1.h  GattCharacteristic1.cpp  GattCharacteristic1.h  GattService1.h
src/common/: Introspectable.cpp  ObjectManager.cpp
src/interfaces/: Introspectable.cpp  ObjectManager.cpp  Properties.cpp  PropertyHandler.h
src/simpledbus/base/: Connection.cpp  Connection.h  Holder.cpp  Holder.h  Logger.cpp  Logger.h  Message.cpp  Message.h
src/simpledbus/common/: Introspectable.h  Properties.cpp  Properties.h
src/simpledbus/interfaces/: PropertyHandler.cpp
test/: CMakeLists.txt
test/python/: test_fixture.py
test/python/interfaces/: unit_message.py
test/src/: test_interfaces.cpp  test_message.cpp  test_proxy.cpp  test_proxy_children.cpp  test_proxy_interfaces.cpp
test/src/accessors/: OpenInterface.h  OpenInterfaceHolder.h  OpenProxy.h  OpenProxyBase.h
toolchain/: linux_compile.sh
